--- a/llmc/CMakeLists.txt
+++ b/llmc/CMakeLists.txt
@@ -4,11 +4,12 @@ include(CheckIncludeFileCXX)
 
 add_executable(llmc
     main.cpp
+    ssgen.cpp
 )
 set_property(TARGET llmc PROPERTY CXX_STANDARD 11)
 set_property(TARGET llmc PROPERTY CXX_STANDARD_REQUIRED ON)
 
-target_link_libraries(llmc -Wl,-E
+target_link_libraries(llmc -Wl,-E -fPIC
     libllmc
     libfrugi
 )
