--- a/llmc/CMakeLists.txt
+++ b/llmc/CMakeLists.txt
@@ -11,15 +11,18 @@ set_property(TARGET llmc PROPERTY CXX_STANDARD 17)
 set_property(TARGET llmc PROPERTY CXX_STANDARD_REQUIRED ON)
 
 add_dependencies(llmc dtree)
+add_dependencies(llmc libtreedbs)
 
 target_link_libraries(llmc -Wl,-E -fPIC
     libllmc
     libfrugi
     dtree
+    libtreedbs
 )
 
 include_directories(
     include
+    ../libllmc/include
 )
 
 install (TARGETS llmc DESTINATION bin)
