Complete rework of DMC, LLMC. Adds a number of tests to evaluate performance of DMC and Dtree

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 build
+tests/correctness/*/*.so
+tests/correctness/*/*.ll
+tests/correctness/*/*.dot
+tests/performance/*/*.so
+tests/performance/*/*.ll
+tests/performance/*/*.dot
