--- a/ll2pins/CMakeLists.txt
+++ b/ll2pins/CMakeLists.txt
@@ -5,7 +5,8 @@ include(CheckIncludeFileCXX)
 add_executable(ll2pins
     main.cpp
 )
-set_property(TARGET ll2pins PROPERTY CXX_STANDARD 11)
+set_property(TARGET ll2pins PROPERTY POSITION_INDEPENDENT_CODE ON)
+set_property(TARGET ll2pins PROPERTY CXX_STANDARD 14)
 set_property(TARGET ll2pins PROPERTY CXX_STANDARD_REQUIRED ON)
 
 target_link_libraries(ll2pins -Wl,-E
