Updates compatibility to latest LLVM, version 11.0.1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,10 @@ set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-g ${CMAKE_CXX_FLAGS_RELEASE}")
 
 find_package(LLVM REQUIRED CONFIG)
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${LLVM_FLAGS} -fno-rtti -fexceptions")
-llvm_map_components_to_libnames(LLVM_LIBS core interpreter irreader)
+#llvm_map_components_to_libnames(LLVM_LIBS core engine interpreter irreader)
+#set (LLVM_LIBS "LLVMCore;LLVMInterpreter;LLVMIRReader;LLVMJITLink;LLVMX86CodeGen;LLVMX86AsmParser;LLVMX86Desc;LLVMX86Disassembler;LLVMX86Info")
+#set(LLVM_LIBS "${LLVM_LIBRARIES}")
+set(LLVM_LIBS "LLVM")
 message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
 message(STATUS "  Using LLVMConfig.cmake in: ${LLVM_DIR}")
 message(STATUS "  - LLVM include:     ${LLVM_INCLUDE_DIRS}")
