--- a/libllmcos/CMakeLists.txt
+++ b/libllmcos/CMakeLists.txt
@@ -13,9 +13,25 @@ if(NOT CLANGEXEC)
     endif()
 endif()
 
-add_library(libllmcos STATIC
-    libllmcos.c
+add_library(libllmcvm STATIC
+    libllmcvm.c
 )
+set_target_properties(libllmcvm PROPERTIES OUTPUT_NAME "llmcvm")
+set_property(TARGET libllmcvm PROPERTY POSITION_INDEPENDENT_CODE ON)
+set_property(TARGET libllmcvm PROPERTY CXX_STANDARD 11)
+set_property(TARGET libllmcvm PROPERTY CXX_STANDARD_REQUIRED ON)
+
+# LLMC VM library
+add_custom_command(OUTPUT libllmcvm.ll
+    COMMAND ${CLANGEXEC} -fPIC ${CMAKE_CURRENT_SOURCE_DIR}/libllmcvm.c -S -emit-llvm -o libllmcvm.ll
+    DEPENDS libllmcvm.c
+    COMMENT "Compiling LLMC VM to libllmcvm.ll"
+    )
+add_custom_target(libllmcvmll ALL SOURCES libllmcvm.ll)
+
+add_library(libllmcos STATIC
+        libllmcos.c
+        )
 set_target_properties(libllmcos PROPERTIES OUTPUT_NAME "llmcos")
 set_property(TARGET libllmcos PROPERTY POSITION_INDEPENDENT_CODE ON)
 set_property(TARGET libllmcos PROPERTY CXX_STANDARD 11)
@@ -23,12 +39,12 @@ set_property(TARGET libllmcos PROPERTY CXX_STANDARD_REQUIRED ON)
 
 # LLMC OS library
 add_custom_command(OUTPUT libllmcos.ll
-    COMMAND ${CLANGEXEC} ${CMAKE_CURRENT_SOURCE_DIR}/libllmcos.c -S -emit-llvm -o libllmcos.ll -I${LTSMIN_INCLUDE_DIRS}
+    COMMAND ${CLANGEXEC} -fPIC ${CMAKE_CURRENT_SOURCE_DIR}/libllmcos.c -S -emit-llvm -o libllmcos.ll
     DEPENDS libllmcos.c
     COMMENT "Compiling LLMC OS to libllmcos.ll"
     )
 add_custom_target(libllmcosll ALL SOURCES libllmcos.ll)
 
-install (FILES ${CMAKE_CURRENT_BINARY_DIR}/libllmcos.a DESTINATION share/llmc)
+install (FILES ${CMAKE_CURRENT_BINARY_DIR}/libllmcvm.ll DESTINATION share/llmc)
 install (FILES ${CMAKE_CURRENT_BINARY_DIR}/libllmcos.ll DESTINATION share/llmc)
 
